crates/ink/tests/ui/contract/fail/trait/trait-message-selector-overlap-3.stderr
error[E0119]: conflicting implementations of trait `DispatchableMessageInfo<42>` for type `Contract`
  --> tests/ui/contract/fail/trait/trait-message-selector-overlap-3.rs:43:9
   |
38 |         fn message1(&self) {}
   |         --------------------- first implementation here
...
43 |         fn message2(&self) {}
   |         ^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Contract`

error[E0119]: conflicting implementations of trait `TraitCallForwarderFor<42>` for type `contract::_::CallBuilder`
  --> tests/ui/contract/fail/trait/trait-message-selector-overlap-3.rs:41:5
   |
36 | /     impl TraitDefinition1 for Contract {
37 | |         #[ink(message)]
38 | |         fn message1(&self) {}
39 | |     }
   | |_____- first implementation here
40 |
41 | /     impl TraitDefinition2 for Contract {
42 | |         #[ink(message)]
43 | |         fn message2(&self) {}
44 | |     }
   | |_____^ conflicting implementation for `contract::_::CallBuilder`
